--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   },
   "dependencies": {
     "chalk": "^5.3.0",
+    "reflect-metadata": "^0.2.2",
     "telegraf": "^4.16.3",
+    "tsyringe": "^4.8.0",
     "zod": "^3.23.8"
   }
 }
