--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "chalk": "^5.3.0",
+    "cron": "^3.1.7",
     "reflect-metadata": "^0.2.2",
     "telegraf": "^4.16.3",
     "tsyringe": "^4.8.0",
