refactor: Add Injectable decorator to CooldownGuard

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "type": "module",
   "scripts": {
     "build": "bun build --outdir ./build src/main.ts",
+    "start": "bun src/main.ts",
     "dev": "bun --watch src/main.ts"
   },
   "devDependencies": {
